syntax = "proto3";

package auth;

option go_package = "authpb";

service AuthorizationService {
    rpc LoginService (LoginRequest) returns (LoginResponse) {};
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string message = 1;
    string access_token = 2;
}
